--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lanya",
+  "name": "Do or die",
   "version": "3.4.3",
   "description": "An open-source Discord bot designed to enhance community interaction with a variety of engaging and useful features.",
   "main": "lanya.js",
